--- a/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen.html
+++ b/web/src/main/webapp/WEB-INF/templates/ordersCRMScreen.html
@@ -145,11 +145,32 @@
 	<div id="modalOverlay" onclick="closeModal()">
 	</div>
 	
-	<div class="updateOrderModal">
+	<div id="updateOrderModal">
 		<h3>Cập nhật đơn hàng</h3>
 		<hr>
 	    <form id="orderForm">
-	    	<div class="row1">
+		    <div class="form-row">
+			    <div class="form-group col-md-4">
+			      <label for="inputDate">Ngày tạo</label>
+			      <input type="date" class="form-control" id="orderDate" placeholder="dd/mm/yyyy" required>
+			    </div>
+			    <div class="form-group col-md-4">
+			      <label for="inputState">Trạng thái</label>
+			      <select id="inputState" class="form-control">
+			        <option selected>Chọn trạng thái...</option>
+			        <option value="1">Nhận đơn</option>
+			        <option value="2">Lưu kho</option>
+			        <option value="3">Vận chuyển</option>
+			        <option value="4">Lưu kho lạnh</option>
+			        <option value="5">Giao hàng</option>	
+			      </select>
+			    </div>
+			    <div class="form-group col-md-4">
+			      <label for="inputOrderCode">Mã đơn hàng</label>
+			      <input type="text" class="form-control" id="orderCode">
+			    </div>
+			</div>
+	    	<!-- <div class="row1">
 		        <label class="label-estaday">Ngày tạo</label>
 		        	<input class="input-row1" type="date" id="orderDate" value="">
 		        <label class="label-status">Trạng thái</label>
@@ -162,42 +183,96 @@
 		        </select>
 		        <label class="label-order-code">Mã đơn hàng</label>
 		       		<input type="text" id="orderCode" placeholder="" class="input-row1">
+		    </div> -->
+		    
+		    <br/><div class="row2">
+		    	
+				    <div class="form-row">
+				        <div class="form-group col-md-6">
+				            <label for="goodsType">Loại hàng hóa</label>
+				            <input type="text" class="form-control" id="goodsType">
+				        </div>
+				        <div class="form-group col-md-6">
+				            <label for="transportMethod">Phương tiện vận chuyển</label>
+				            <input type="text" class="form-control" id="transportMethod">
+				        </div>
+				    </div>
+				
 		    </div>
+		    
+		    <div class="container">
+				<div class="column">
+			        <fieldset>
+			            <legend>Thông tin người gửi</legend>
+			            <table class="sender-table">
+			                <tr>
+			                    <td>Họ tên:</td>
+			                    <td><input type="text" class="input-container" /></td>
+			                </tr>
+			                <tr>
+			                    <td>SDT:</td>
+			                    <td><input type="text" class="input-container" placeholder="(+84) 1234567890" /></td>
+			                </tr>
+			                <tr>
+			                    <td>Email:</td>
+			                    <td><input type="email" class="input-container" /></td>
+			                </tr>
+			            </table>
+			        </fieldset>
+				</div>
+	
+				<div class="column col2">
+				        <fieldset>
+				            	<legend>Thông tin người nhận</legend>
+				            <table class="receiver-table">
+				                <tr>
+				                    <td>Họ tên:</td>
+				                    <td><input type="text" class="input-container" /></td>
+				                </tr>
+				                <tr>
+				                    <td>SDT:</td>
+				                    <td><input type="text" class="input-container" placeholder="(+84) 1234567890" /></td>
+				                </tr>
+				                <tr>
+				                    <td>Email:</td>
+				                    <td><input type="email" class="input-container" /></td>
+				                </tr>
+				            </table>
+				        </fieldset>
+				</div>
+		</div>
 	        
-	        <br/><label>Loại hàng hóa</label>
-	        <input type="text" id="goodsType">
+	     
+	        <div class="row2">
+	        	<div class="form-row">
+				        <div class="form-group col-md-6">
+				            <label for="goodsType">Yêu cầu</label>
+				            <div data-mdb-input-init class="form-outline">
+								<textarea class="form-control" id="textAreaExample2" rows="8"></textarea>
+							</div>
+				        </div>
+				        <div class="form-group col-md-6">
+				            <label for="transportMethod">Địa chỉ</label>
+				            <div data-mdb-input-init class="form-outline">
+								<textarea class="form-control" id="textAreaExample2" rows="8"></textarea>
+							</div>
+				        </div>
+				    </div>
+	        </div>
 	
-	        <label>Phương tiện vận chuyển</label>
-	        <input type="text" id="transportMethod">
-	
-	        <h4>Thông tin người gửi</h4>
-	        <label>Họ tên</label>
-	        <input type="text" id="senderName">
-	        <label>SDT</label>
-	        <input type="text" id="senderPhone" placeholder="(+84) 1234567890">
-	        <label>Email</label>
-	        <input type="email" id="senderEmail">
-	
-	        <h4>Thông tin người nhận</h4>
-	        <label>Họ tên</label>
-	        <input type="text" id="receiverName">
-	        <label>SDT</label>
-	        <input type="text" id="receiverPhone">
-	        <label>Email</label>
-	        <input type="email" id="receiverEmail">
-	        <label>Địa chỉ</label>
-	        <input type="text" id="receiverAddress">
-	
-	        <label>Yêu cầu:</label>
-	        <textarea id="requirements"></textarea>
-	
-	        <h4>Tự động cập nhật qua các kênh</h4>
-	        <label><input type="checkbox" id="emailUpdate"> Email</label>
-	        <label><input type="checkbox" id="zaloUpdate"> Zalo</label>
-	        <label><input type="checkbox" id="smsUpdate"> SMS</label>
-	
-	        <button type="button" onclick="saveOrder()">Lưu</button>
-	        <button type="button" onclick="closeOrderModal()">Đóng</button>
+	        <div class="row3">
+				<legend class="legent-row3">Tự động cập nhật qua các kênh</legend>
+				<label><input type="checkbox" id="emailUpdate" style="margin-left: 30px; background-color: gray; color: black;"> Email</label>
+				<br><label><input type="checkbox" id="zaloUpdate" style="margin-left: 30px; background-color: gray; color: black;"> Zalo</label><span> (+84) 0987654321</span>
+					<a href="#" style="color: #6942ca;"> Thay đổi</a>
+				<br><label><input type="checkbox" id="smsUpdate" style="margin-left: 30px; background-color: gray; color: black;"> SMS</label><span> (+84) 0987654321</span>
+					<a href="#" style="color: #6942ca;"> Thay đổi</a>
+			</div>
+		        
+			<div class="row4">
+				<button type="button" onclick="saveOrder()">Lưu</button>
+	        	<button type="button" onclick="closeModal()">Trở về</button>
+			</div>
 	    </form>
 	</div>
 	
