--- a/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
+++ b/web/src/main/webapp/WEB-INF/templates/fragments/ordersContentWrapperCRM.html
@@ -22,6 +22,15 @@
 				 </div>
 
 			</div>
+			<div class="content-header-left col-md-6 col-12 mb-2">
+				 <div class="row">
+				 	<div class="heading-elements">
+            			<a th:href="@{/orders}">
+            				<button class="btn btn-primary btn-sm config" fdprocessedid="fzh15n"><i class="fas fa-plus white"></i> Đơn hàng</button>
+            			</a>
+                	</div>	
+				 </div>
+			</div>
 		</div>
 	</div>
 </body>
